<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/menu_productos" />
        <item
            android:id="@+id/nav_ubicacion"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_ubicacion" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_favorits"
            android:icon="@drawable/ic_favorite_border_black_24dp"
            android:title="@string/menu_favoritos" />
    </group>


</menu>
